fixed watch cta alignment and hyperlink style rule

--- a/src/style/CampaignPage.less
+++ b/src/style/CampaignPage.less
@@ -1,12 +1,12 @@
 .campaign-page {
 	// makes hyperlinks look nice, but wouldn't work on light backgrounds
 	// TODO: should we remove this? it's not terribly important
-	p > a {
+	p > a, span > a {
 		color: white;
 		text-decoration: none;
 		border-bottom: 1px dashed;
 	}
-	p > a:hover {
+	p > a:hover, span > a:hover  {
 		color: inherit;
 		border-bottom: none;
 	}
@@ -135,7 +135,7 @@
 				position: absolute;
 				bottom: 1.5vw;
 				width: 39vw;
-				margin-left: 30%;
+				margin-left: 30.5%;
 			}
 			.link a {
 				font-size: 20px;
